# chromors

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  debug_embed.rs  patch_compass.py  patch_embed.py  patch_gravity.py  patch_grid.py  patch_mask.py  patch_morph.py  patch_region.py  patch_rs.py  patch_test.py  read_png.py  revert_offsets.py  scratch.rs
chromors-ai/: Cargo.toml  build.rs  download_models.py
chromors-ai/src/: cascadepsp.rs  depth_anything.rs  lama.rs  lib.rs  modnet.rs  prelude.rs  realesrgan.rs  sam2.rs  sam3.rs  swinir.rs  vitmatte.rs
chromors-ai/tests/: integration.rs
chromors-backend-raw/: Cargo.toml  Cargo.toml.standalone  build.rs
chromors-backend-raw/src/: decode.rs  handle.rs  lib.rs
chromors-backend-vello/: Cargo.toml  Cargo.toml.standalone
chromors-backend-vello/src/: lib.rs
chromors-backend-vips/: Cargo.toml  Cargo.toml.standalone  build.rs
chromors-backend-vips/src/: backend.rs  custom.rs  generator.rs  generator_rng.rs  gobject.rs  interpolate.rs  lib.rs  prelude.rs  region.rs  sbuf.rs  source.rs  space.rs  stage.rs  storage.rs  target.rs  working.rs
chromors-backend-wgpu/: Cargo.toml  Cargo.toml.standalone  build.rs
chromors-backend-wgpu/src/: buffer.rs  color_params.rs  (+10 more)
chromors-core/: Cargo.toml  Cargo.toml.standalone
chromors-viewer/: Cargo.toml
chromors-viewer/src/: app.rs  gpu.rs  main.rs
chromors-viewer/src/editor/: compile.rs  graph.rs  mod.rs  params.rs  registry.rs  types.rs
chromors-viewer/src/editor/descriptors/: color.rs  mod.rs  sinks.rs  sources.rs
chromors-viewer/src/ui/: canvas.rs  mod.rs  text.rs  theme.rs
chromors-viewport/: Cargo.toml
chromors-viewport/src/: atlas.rs  bench.rs  camera.rs  controller.rs  layer.rs  lib.rs  overlay.rs  pipeline.rs  rect.rs  renderer.rs  source.rs  vector.rs  vello_overlay.rs
chromors-viewport/src/fetcher/: mod.rs  stage.rs  tiles.rs
chromors-viewport/src/interactive/: bezier.rs  mod.rs
cpp/: slang_wrapper.h  wrapper_slang.h
docs/: ARCHITECTURE.md  ROADMAP.md  ai-inference.md  architecture.md  generators.md  gpu-ops-todo.md  native-color-management.md  node-editor.md  processing-model-v2.md  staging-foundation.md
examples/: test_raw.rs
poc/: Cargo.toml  build.rs
poc/cpp/: slang_wrapper.cpp  wrapper.h
poc/docs/: core-simplification.md  kind-polymorphism.md  new-datatypes.md
poc/shaders/lib/: pixel.slang  region.slang  srgb.slang
poc/shaders/lib/ops/: blur_params.slang
poc/shaders/ops/: brightness.slang  color.slang  filters.slang  gamma.slang  histogram.slang  invert.slang  misc.slang  resample.slang  saturation.slang  shrink.slang
poc/src/: error.rs  io.rs  kind.rs  lib.rs  node.rs  work_unit.rs
poc/src/backend/: mod.rs
poc/src/backend/gpu/: color_params.rs  compile.rs  context.rs  emit.rs  materialize.rs  mod.rs  pass.rs  view.rs
poc/src/backend/raw/: mod.rs
poc/src/backend/vello/: handle.rs
poc/src/backend/vips/: custom.rs  mod.rs  region.rs  sbuf.rs  source.rs  target.rs  working.rs
poc/src/color/: convert.rs  matrix.rs  mod.rs  model.rs  primaries.rs  space.rs  transfer.rs
poc/src/data/: histogram.rs  image.rs  lut.rs  mask2d.rs  mod.rs  vector_graphics.rs  vectorscope.rs
poc/src/export/: avif.rs
poc/src/operation/: arithmetic.rs  bands.rs  composite.rs  convolution.rs  custom_ops.rs  edge.rs  fft.rs  filters.rs  geometry.rs  icc.rs  misc.rs  mod.rs  mosaicing.rs  opacity.rs  reinterpret.rs  stats.rs
poc/src/pixel/: cmyk.rs  component.rs  lab.rs  meta.rs  mod.rs  oklch.rs  rgb.rs  rgba.rs  scrgb.rs  xyz.rs  yxy.rs
poc/tests/: arch_test.rs  cross_backend.rs  gpu_probe.rs  smoke.rs  vips_smoke.rs
poc/tests/common/: mod.rs
poc/tests/cross_backend/: main.rs
poc/tests/vips_ops/: arithmetic.rs  custom.rs  filters.rs  geometry.rs  histogram_capability.rs  robustness.rs
src/: buffer.rs  cache.rs  error.rs  exif.rs  generator.rs  geometry.rs  kind.rs  lib.rs  node.rs  stage.rs  target.rs  utils.rs  work_unit.rs
templates/: shader.slang
tests/: arch_test.rs  chain_10.rs  cross_backend.rs  gpu.rs  gpu_probe.rs  integration.rs  pass_split.rs  temp.rs  temp_vips.rs  vips_ops.rs
(+269 files in other folders)
