[package]
name = "chromors"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
chromors-core = { path = "chromors-core" }
chromors-backend-wgpu = { path = "chromors-backend-wgpu" }
chromors-backend-vips = { path = "chromors-backend-vips" }
bytemuck = "1.25.0"
lru = "0.18.0"
pollster = "0.4.0"
wgpu = { version = "29.0.3", features = ["spirv"] }
libc = "0.2"
spirv-tools = "0.13.3"
tracing = "0.1.44"
half = { version = "2", features = ["bytemuck"] }
enum_dispatch = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
wide = "0.7.28"
rayon = "1.12.0"
ctor = "0.2"
ndarray = "0.17.2"

[dev-dependencies]
chromors = { path = "." }

[build-dependencies]
bindgen = "0.71"
cc = "1"
pkg-config = "0.3"

[workspace]
resolver = "2"
members = [
    "chromors-core",
    "chromors-backend-wgpu",
    "chromors-backend-vips",
    "chromors-backend-raw",
    "chromors-backend-vello",
    "chromors-viewport",
    "chromors-ai"
]
