[package]
name = "poc"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
lru = "0.18.0"
pollster = "0.4.0"
wgpu = { version = "29.0.3", features = ["spirv"] }
libc = "0.2"
spirv-tools = "0.13.3"
tracing = "0.1.44"
half = { version = "2", features = ["bytemuck"] }
enum_dispatch = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
wide = "0.7.28"
rayon = "1.12.0"

[build-dependencies]
bindgen = "0.71"
cc = "1"
pkg-config = "0.3"
